2008-02-23  Jürg Billeter  <j@bitron.ch>

	* gen-project/valaprojectgenerator.vala: fix Date.set_time_val call

2008-02-22  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support no_array_length metadata
	  attribute

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata: fix
	  gtk_tree_path_get_indices binding, fixes bug 515410

	* vapi/gtk+-2.0.vapi: regenerated

2008-02-22  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: fix gtk_selection_data_set binding,
	  fixes bug 515409

	* vapi/gtk+-2.0.vapi: regenerated

2008-02-21  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add g_date_strftime binding, fixes bug 514346

2008-02-21  Jürg Billeter  <j@bitron.ch>

	* vala/valamemorymanager.vala, vala/valaparenthesizedexpression.vala,
	  vala/valasemanticanalyzer.vala, vala/valasymbolresolver.vala,
	  gobject/valaccodegenerator.vala: support delegate parameters in
	  creation methods, fixes bug 513273

2008-02-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libsoup-2.4/: update to libsoup 2.3.2

	* vapi/libsoup-2.4.vapi: regenerated

2008-02-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtksourceview-2.0/: update to gtksourceview 2.1.2

	* vapi/gtksourceview-2.0.vapi: regenerated

2008-02-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libwnck-1.0/: update to libwnck 2.21.91

2008-02-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/,
	  vapi/packages/gstreamer-interfaces-0.10/: update to
	  gstreamer 0.10.17

	* vapi/gstreamer-0.10.vapi, vapi/gstreamer-interfaces-0.10.vapi:
	  regenerated

2008-02-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/, vapi/packages/gio-unix-2.0/: update to
	  glib 2.15.5

	* vapi/gio-2.0.vapi, vapi/gio-unix-2.0.vapi: regenerated

2008-02-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/pango/: fix pango_layout_get_pixel_size binding

	* vapi/pango.vapi: regenerated

2008-02-19  Raffaele Sandrini  <raffaele@sandrini.ch>

	* AUTHORS, ccode/valaccodeelementaccess.vala,